home/style.css
/* ... */
.repositores a:hover {
  filter: brightness(1.2);
}

.containerFav {
  width: 57.3rem;
  display: flex;
  justify-content: flex-end;
}

.favRepos {
  width: 7.9rem;
  height: 2.6rem;

  margin-right: 1.6rem;

  display: flex;
  align-items: center;
  justify-content: center;

  color: white;
  background-color: var(--bg-ul-main-hover);
  border-radius: 0.8rem;
}
 
.favRepos p {
  padding-left: 0.9rem;
}


/* ========== FOLLOW ========== */
/* ===== FOLLOWING ===== */
.containerFollowing,
.containerFollowers {
  width: 31.2rem;
  height: 34.7rem;

  padding: 1.6rem 2rem 2.8rem;

  background-color: white;
  border-radius: 0.8rem;
}

.follow img {
  width: 8.4rem;
  height: 10.2rem;

  border-radius: 0.8rem;
}

.follow .header {
  display: flex;
  align-items: center;
  gap: 0.8rem;

  padding-bottom: 2rem;
}

.follow h4 {
  font-size: 1.6rem;
}

.follow p {
  font-size: 1.4rem;
  font-weight: 700;

  color: var(--text-primary);
}

.follow p::before {
  content: "(";
}

.follow p::after {
  content: ")";
}

.follow ul {
  width: 100%;

  display: flex;
  flex-wrap: wrap;
  gap: 1rem;

  padding-bottom: 3rem;
  list-style: none;
}

.follow a {
  font-size: 1.4rem;
  font-weight: 700;

  text-decoration: none;

  color: var(--text-primary);
}

/* ===== FOLLOWERS ===== */
.containerFollowers {
  margin-top: 0.6rem;
}

/* ========== SWALL ========== */
.swal-modal {
  position: absolute;
  right: 50%;
  transform: translateX(50%);
}

.swal-overlay--show-modal .swal-modal {
  animation: showSweetAlert .500ms;
}

.swal-overlay {
  position: absolute;
  bottom: 10;
}

.swal-button {
  background-color: var(--bg-button);

  border-radius: 0.8rem;
}

.swal-button:not([disabled]):hover {
  background-color: var(--bg-button-hover);
}

.swal-icon--error {
  border-color: var(--text-pink);
}

.swal-icon--error__line {
  background-color: var(--text-pink);
}

/* ===== DARK THEME ===== */
body.darkTheme {
  background-color: var(--bg-body-dark);
}

body.darkTheme header, 
body.darkTheme aside,
body.darkTheme .welcome,
body.darkTheme .mainActions,
body.darkTheme .lastRepositores,
body.darkTheme .containerFollowing,
body.darkTheme .containerFollowers {
  background-color: var(--bg-secundary);
}

body.darkTheme input[type=text],
body.darkTheme .logo {
  background-color: var(--bg-secundary);
  filter: brightness(0.8);
}

body.darkTheme header ul li a,
body.darkTheme logout a {
  color: var(--text-dark);
}

body.darkTheme header ul li + li::before {
  border-left: 0.25rem solid var(--bg-secundary);
  filter: brightness(1.5);
}

body.darkTheme .welcome h1, 
body.darkTheme .repos p,
body.darkTheme .favorites p, 
body.darkTheme .followers p, 
body.darkTheme .following p,
body.darkTheme .mainActions h3,
body.darkTheme .lastRepositores h3,
body.darkTheme .containerFollowing h4,
body.darkTheme .containerFollowers h4 {
  color: var(--text-dark);
}

body.darkTheme .welcomeInfos p:last-child {
  color: var(--text-primary);
}

body.darkTheme .repositores {
  border-bottom: 1px solid var(--bg-secundary);
  filter: brightness(1.2);
}

body.darkTheme .containerRepositores {
  background-color: var(--bg-secundary);
  filter: brightness(0.8);
}

body.darkTheme .repositores a {
  filter: brightness(1.1);
  transition: filter 0.1s;
}

body.darkTheme .repositores a:hover {
  filter: brightness(1.4);
}

body.darkTheme .favRepos {
  filter: brightness(1.2);
}

body.darkTheme .swal-modal {
  background-color: rgb(0, 0, 0);
  border-radius: 0.8rem;
}

body.darkTheme .swal-title,
body.darkTheme .swal-text {
  color: var(--text-dark);
}

/* ===== RESPONSIVE ===== */

@media (max-width: 768px) {
  nav,
  .logout,
  .findUser,
  aside,
  #closeMenu {
    display: none;
  }

  html,
  body {
    overflow-x: hidden;
  }

  .lastRepositores,
  .repositores,
  .mainActions,
  .welcome {
    width: 34.4rem;
    margin-inline: 0;
  }

  .containerHeader {
    position: relative;
  }
  
  #menuButton {
    display: initial;
    position: absolute;
    right: 1.5rem;
    width: 3.2rem;
    height: 3.2rem;
  } 

  main {
    width: 34.4rem;
    margin-top: 1.6rem;
    margin-inline: 1.5rem;
    display: flex;
    justify-content: center;
  }

  .welcome h1 {
    font-size: 2.4rem;
    width: 29.3rem;
    height: 2.8rem;
  }

  .containerPhrase {
    width: 29.4rem;
    height: 3.1rem;
    font-size: 1rem;
    line-height: 1.2rem;
  }

  .welcomeInfos {
    display: flex;
    justify-content: center;
    gap: 2rem;
  }

  .mainActions {
    margin-block: 2rem;
  }
  .mainActions li { 
    padding-inline: 2rem;
  }

  .repositores {
    width: 29.6rem;
  }

  .containerFav {
    width: 10rem;
  }

  .favRepos {
    width: 7rem;
    margin-right: 0;
  }

  .follow {
    width: 34.4rem;
    margin: 70rem 0 2rem -34.5rem;
  }

  .follow img {
    width: 9.4rem;
  }

  .containerFollowing,
  .containerFollowers {
    width: initial;
  }

  .containerFollowing {
    margin-bottom: 2rem;
  }

  body.darkTheme header {
    filter: brightness(0.6);
  }

  /* ===== OPEN MENU ===== */
  body.menuExtended > main {
    visibility: hidden;
    margin: 0;
    width: 100%;
  }

  body.menuExtended .hero {
    display: none;
  }

  body.menuExtended aside {
    display: flex;
    visibility: visible;
    border-radius: initial;
    width: 100%;
    height: auto;
  }

  body.menuExtended #closeMenu {
    display: initial;
    position: absolute;
    right: 1.5rem;
    width: 3.2rem;
    height: 3.2rem;
  } 
  
  body.menuExtended #menuButton {
    opacity: 0;
    visibility: hidden;
  }

}

